--- a/client/src/ClockCardsSection/ClockCard.css
+++ b/client/src/ClockCardsSection/ClockCard.css
@@ -5,8 +5,8 @@
   border-radius: 15px;
   padding: 14px;
   margin: 15px;
-  width: 20vw;
-  height: 20vh;
+  width: 20%;
+  min-height: 180px;
   background-color: white;
   color: black;
   box-shadow: -1px 1px 11px 4px black;;
@@ -32,18 +32,6 @@
   word-break: break-word;
 }
 
-.auto-container{
-  display: flex;
-  width: 100%;
-  height: 20vh;
-  justify-content: center;
-}
-
-
-.card-content {
-  margin: 10px;
-}
-
 .card-button{
   align-self: flex-end;
   background-color: white;
@@ -51,15 +39,21 @@
   cursor: pointer;
 }
 
-.cards-section{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 90%;
-    height: auto;
-    padding: 10px;
+.card-content {
+  margin: 10px;
 }
 
-.loader{
-  margin: 15px
+.cards-section-container{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.cards-section{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 68%;
+  height: auto;
+  padding: 10px;
 }
